@@ -1,6 +1,7 @@
 = 3.4.11 (not released yet)
 - Fix refresh-link on main form (not subform)
 - Workaround for counter_cache bug on rails4 (https://github.com/rails/rails/pull/14849)
+- Support create form on nested scaffolds on through association, if through reflection association is included in create form
 
 = 3.4.10
 - singular associations on subform are always created, in other case it's not possible to enable a checkbox without filling text fields.
